# IN204__projet_GianlucaBAGHINO_NataliaGALLEGO

./: README.md
POOH/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  MiProyecto.sln  MiProyecto.vcxproj  MiProyecto.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alpha.py  cmake_install.cmake  main.cpp  output.xml  printpng.cpp  printpng.h  scene.txt  xml_reader.cpp  xml_reader.h
POOH/ImGui/: ImGuiExample.cpp  ImGuiExample.h
POOH/MiProyecto.dir/Debug/MiProyecto.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
POOH/RayTracer/: RayTracer.cpp  RayTracer.hpp  aabb.hpp  bvh.hpp  camera.hpp  clamp.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  perlin.hpp  quad.hpp  ray.hpp  ray_tracing_common.hpp  rtw_stb_image.hpp  sphere.hpp  stb_image_write.h  texture.hpp  vec3.hpp
POOH/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
POOH/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
